--- a/templates/signup.html
+++ b/templates/signup.html
@@ -17,11 +17,11 @@
         <div class="content-area">
             <div class="left-section">
                 <!-- Cloud Logo Image -->
-                <img
+                <!--<img
                 src="https://cdn.builder.io/api/v1/image/assets/TEMP/a51de5e4d1d91ed1e315cfb45c5436b6f2fbcc8c?placeholderIfAbsent=true"
                 alt="Smiling Cloud"
-                class="h-[261px] w-[356px] max-md:h-[220px] max-md:w-[300px] max-sm:h-[180px] max-sm:w-[250px]"
-              />
+                class="h-[200px] w-[300px] max-md:h-[220px] max-md:w-[300px] max-sm:h-[180px] max-sm:w-[250px]"
+              />-->
               </div>
           <div class="right-section">
             <h1 class="signup-title">Sign Up</h1>
