--- a/static/css/signup.css
+++ b/static/css/signup.css
@@ -55,6 +55,9 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    height: 200px;
+    width: 300px;
+    z-index: -1;
   }
   
   .cloud-image {
@@ -97,7 +100,7 @@
   .input-field {
     margin-left: 20px;
     width: 90%;
-    padding: 8px 16px; /* smaller padding */
+    padding: 12px 20px;
     border-radius: 40px; /* still rounded */
     border: 1px solid rgba(71, 85, 105, 0.5);
     background-color: #e4e4e7;
